--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -1,3 +1,31 @@
+@font-face {
+  font-family: "ranchoregular";
+  src: url("../../fonts/ranchoregular/Rancho-Regular-webfont.eot");
+  src: url("../../fonts/ranchoregular/Rancho-Regular-webfont.eot?#iefix") format("embedded-opentype"), url("../../fonts/ranchoregular/Rancho-Regular-webfont.woff2") format("woff2"), url("../../fonts/ranchoregular/Rancho-Regular-webfont.woff") format("woff"), url("../../fonts/ranchoregular/Rancho-Regular-webfont.ttf") format("truetype"), url("../../fonts/ranchoregular/Rancho-Regular-webfont.svg#ranchoregular") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: "rochesterregular";
+  src: url("../../fonts/rochesterregular/Rochester-Regular-webfont.eot");
+  src: url("../../fonts/rochesterregular/Rochester-Regular-webfont.eot?#iefix") format("embedded-opentype"), url("../../fonts/rochesterregular/Rochester-Regular-webfont.woff2") format("woff2"), url("../../fonts/rochesterregular/Rochester-Regular-webfont.woff") format("woff"), url("../../fonts/rochesterregular/Rochester-Regular-webfont.ttf") format("truetype"), url("../../fonts/rochesterregular/Rochester-Regular-webfont.svg#rochesterregular") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: "sevillanaregular";
+  src: url("../../fonts/sevillanaregular/Sevillana-Regular-webfont.eot");
+  src: url("../../fonts/sevillanaregular/Sevillana-Regular-webfont.eot?#iefix") format("embedded-opentype"), url("../../fonts/sevillanaregular/Sevillana-Regular-webfont.woff2") format("woff2"), url("../../fonts/sevillanaregular/Sevillana-Regular-webfont.woff") format("woff"), url("../../fonts/sevillanaregular/Sevillana-Regular-webfont.ttf") format("truetype"), url("../../fonts/sevillanaregular/Sevillana-Regular-webfont.svg#sevillanaregular") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: "berkshire_swashregular";
+  src: url("../../fonts/berkshire_swashregular/berkshireswash-regular-webfont.eot");
+  src: url("../../fonts/berkshire_swashregular/berkshireswash-regular-webfont.eot?#iefix") format("embedded-opentype"), url("../../fonts/berkshire_swashregular/berkshireswash-regular-webfont.woff2") format("woff2"), url("../../fonts/berkshire_swashregular/berkshireswash-regular-webfont.woff") format("woff"), url("../../fonts/berkshire_swashregular/berkshireswash-regular-webfont.ttf") format("truetype"), url("../../fonts/berkshire_swashregular/berkshireswash-regular-webfont.svg#berkshire_swashregular") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
 header {
   background-color: #579c87;
   height: 100px;
@@ -13,20 +41,46 @@ footer {
   height: 50px;
   display: flex;
   justify-content: space-between;
+  margin-top: 100px;
 }
 footer a {
   color: #fdcb46;
 }
 
-section {
+.container {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
 }
-section article {
-  height: 300px;
-  width: 262px;
-  background-color: red;
+.container article {
+  margin-top: 100px;
+  height: 600px;
+  width: 525px;
+  text-align: center;
+  font-size: 30px;
+  display: flex;
+  /* contexte sur le parent */
+  flex-direction: column;
+  /* direction d'affichage verticale */
+  justify-content: center;
+  /* alignement vertical */
+}
+.container #LNE {
+  background-color: #fcdfdb;
+  font-family: "ranchoregular";
+  color: #3c1218;
+}
+.container #LCALF {
+  background-color: #fff5fe;
+  font-family: "rochesterregular";
+}
+.container #LDDP {
+  background-color: #f9f9f9;
+  font-family: "sevillanaregular";
+}
+.container #LPDG {
+  background-color: #fdfdfd;
+  font-family: "berkshire_swashregular";
 }
 
 /*# sourceMappingURL=style.css.map */
