--- a/styles/scss/style.scss
+++ b/styles/scss/style.scss
@@ -1,109 +1,160 @@
 $color-primary:rgb(87,156,135);
 
-@font-face {
-    font-family: 'ranchoregular';
-    src: url('../../fonts/ranchoregular/Rancho-Regular-webfont.eot');
-    src: url('../../fonts/ranchoregular/Rancho-Regular-webfont.eot?#iefix') format('embedded-opentype'),
-        url('../../fonts/ranchoregular/Rancho-Regular-webfont.woff2') format('woff2'),
-        url('../../fonts/ranchoregular/Rancho-Regular-webfont.woff') format('woff'),
-        url('../../fonts/ranchoregular/Rancho-Regular-webfont.ttf') format('truetype'),
-        url('../../fonts/ranchoregular/Rancho-Regular-webfont.svg#ranchoregular') format('svg');
-    font-weight: normal;
-    font-style: normal;
+@mixin shadows {
+    box-shadow: 0 0.9px 2.4px rgba(0, 0, 0, 0.016), 0 2.2px 6px rgba(0, 0, 0, 0.022), 0 4.4px 12.2px rgba(0, 0, 0, 0.028), 0 9.1px 25.2px rgba(0, 0, 0, 0.034), 0 25px 69px rgba(0, 0, 0, 0.05);
 }
 
-@font-face {
-    font-family: 'rochesterregular';
-    src: url('../../fonts/rochesterregular/Rochester-Regular-webfont.eot');
-    src: url('../../fonts/rochesterregular/Rochester-Regular-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../../fonts/rochesterregular/Rochester-Regular-webfont.woff2') format('woff2'),
-         url('../../fonts/rochesterregular/Rochester-Regular-webfont.woff') format('woff'),
-         url('../../fonts/rochesterregular/Rochester-Regular-webfont.ttf') format('truetype'),
-         url('../../fonts/rochesterregular/Rochester-Regular-webfont.svg#rochesterregular') format('svg');
-    font-weight: normal;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'sevillanaregular';
-    src: url('../../fonts/sevillanaregular/Sevillana-Regular-webfont.eot');
-    src: url('../../fonts/sevillanaregular/Sevillana-Regular-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../../fonts/sevillanaregular/Sevillana-Regular-webfont.woff2') format('woff2'),
-         url('../../fonts/sevillanaregular/Sevillana-Regular-webfont.woff') format('woff'),
-         url('../../fonts/sevillanaregular/Sevillana-Regular-webfont.ttf') format('truetype'),
-         url('../../fonts/sevillanaregular/Sevillana-Regular-webfont.svg#sevillanaregular') format('svg');
-    font-weight: normal;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'berkshire_swashregular';
-    src: url('../../fonts/berkshire_swashregular/berkshireswash-regular-webfont.eot');
-    src: url('../../fonts/berkshire_swashregular/berkshireswash-regular-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../../fonts/berkshire_swashregular/berkshireswash-regular-webfont.woff2') format('woff2'),
-         url('../../fonts/berkshire_swashregular/berkshireswash-regular-webfont.woff') format('woff'),
-         url('../../fonts/berkshire_swashregular/berkshireswash-regular-webfont.ttf') format('truetype'),
-         url('../../fonts/berkshire_swashregular/berkshireswash-regular-webfont.svg#berkshire_swashregular') format('svg');
-    font-weight: normal;
-    font-style: normal;
-}
-
-
-header {
-    background-color: $color-primary;
-    height: 100px;
-    text-align: center;
-    .logo {
-        height: 50px;
-        margin-top:25px;
-    }
-}
-
-footer{
-    background-color: $color-primary;
-    height:50px;
-    display:flex;
-    justify-content:space-between;
-    margin-top:100px;
-    a {
-        color:rgb(253,203,70);
-    }
-}
-
-.container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-
-    article {
-        margin-top: 100px;
-        height: 600px;
-        width: 525px;
-        text-align: center;
-        font-size: 30px;
-        display: flex; /* contexte sur le parent */
-        flex-direction: column; /* direction d'affichage verticale */
-        justify-content: center; /* alignement vertical */
-    }
-
-    #LNE {
-        background-color: rgb(252,223,219);
+    @font-face {
         font-family: 'ranchoregular';
-        color: rgb(60,18,24);
+        src: url('../../fonts/ranchoregular/Rancho-Regular-webfont.eot');
+        src: url('../../fonts/ranchoregular/Rancho-Regular-webfont.eot?#iefix') format('embedded-opentype'), url('../../fonts/ranchoregular/Rancho-Regular-webfont.woff2') format('woff2'), url('../../fonts/ranchoregular/Rancho-Regular-webfont.woff') format('woff'), url('../../fonts/ranchoregular/Rancho-Regular-webfont.ttf') format('truetype'), url('../../fonts/ranchoregular/Rancho-Regular-webfont.svg#ranchoregular') format('svg');
+        font-weight: normal;
+        font-style: normal;
     }
 
-    #LCALF {
-        background-color: rgb(255,245,254);
+    @font-face {
         font-family: 'rochesterregular';
+        src: url('../../fonts/rochesterregular/Rochester-Regular-webfont.eot');
+        src: url('../../fonts/rochesterregular/Rochester-Regular-webfont.eot?#iefix') format('embedded-opentype'), url('../../fonts/rochesterregular/Rochester-Regular-webfont.woff2') format('woff2'), url('../../fonts/rochesterregular/Rochester-Regular-webfont.woff') format('woff'), url('../../fonts/rochesterregular/Rochester-Regular-webfont.ttf') format('truetype'), url('../../fonts/rochesterregular/Rochester-Regular-webfont.svg#rochesterregular') format('svg');
+        font-weight: normal;
+        font-style: normal;
     }
 
-    #LDDP {
-        background-color: rgb(249,249,249);
+    @font-face {
         font-family: 'sevillanaregular';
+        src: url('../../fonts/sevillanaregular/Sevillana-Regular-webfont.eot');
+        src: url('../../fonts/sevillanaregular/Sevillana-Regular-webfont.eot?#iefix') format('embedded-opentype'), url('../../fonts/sevillanaregular/Sevillana-Regular-webfont.woff2') format('woff2'), url('../../fonts/sevillanaregular/Sevillana-Regular-webfont.woff') format('woff'), url('../../fonts/sevillanaregular/Sevillana-Regular-webfont.ttf') format('truetype'), url('../../fonts/sevillanaregular/Sevillana-Regular-webfont.svg#sevillanaregular') format('svg');
+        font-weight: normal;
+        font-style: normal;
     }
 
-    #LPDG {
-        background-color: rgb(253,253,253);
+    @font-face {
         font-family: 'berkshire_swashregular';
+        src: url('../../fonts/berkshire_swashregular/berkshireswash-regular-webfont.eot');
+        src: url('../../fonts/berkshire_swashregular/berkshireswash-regular-webfont.eot?#iefix') format('embedded-opentype'), url('../../fonts/berkshire_swashregular/berkshireswash-regular-webfont.woff2') format('woff2'), url('../../fonts/berkshire_swashregular/berkshireswash-regular-webfont.woff') format('woff'), url('../../fonts/berkshire_swashregular/berkshireswash-regular-webfont.ttf') format('truetype'), url('../../fonts/berkshire_swashregular/berkshireswash-regular-webfont.svg#berkshire_swashregular') format('svg');
+        font-weight: normal;
+        font-style: normal;
     }
+
+
+    header {
+        background-color: $color-primary;
+        height: 150px;
+        text-align: center;
+
+        .logo {
+            height: 75px;
+            margin-top: 35px;
+        }
+    }
+
+    footer {
+        background-color: $color-primary;
+        height: 75px;
+        display: flex;
+        justify-content: space-between;
+        margin-top: 75px;
+
+        a {
+            color: rgb(253,203,70);
+            text-decoration: none;
+            font-size: 30px;
+            margin: 20px;
+        }
+    }
+
+    .container {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+
+        article {
+            margin-top: 100px;
+            height: 600px;
+            width: 525px;
+            text-align: center;
+            font-size: 30px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            @include shadows;
+        }
+
+        #LNE {
+            background-color: rgb(252,223,219);
+            font-family: 'ranchoregular';
+            color: rgb(60,18,24);
+
+            img {
+                width: 100px;
+                margin-left: auto;
+                margin-right: auto;
+            }
+        }
+
+        #LCALF {
+            background-color: rgb(255,245,254);
+            font-family: 'rochesterregular';
+
+            h2 {
+                background: linear-gradient(to right, #c77412 0%, #7738cf 100%);
+                -webkit-background-clip: text;
+                -webkit-text-fill-color: transparent;
+            }
+
+            h3 {
+                color: #c77412;
+            }
+        }
+
+        #LDDP {
+            background-color: rgb(249,249,249);
+            font-family: 'sevillanaregular';
+
+            h2 {
+                background: linear-gradient(to right, #30CFD0 0%, #330867 100%);
+                -webkit-background-clip: text;
+                -webkit-text-fill-color: transparent;
+            }
+
+            h3 {
+                color: #330867;
+            }
+        }
+
+        #LPDG {
+            background-color: rgb(253,253,253);
+            font-family: 'berkshire_swashregular';
+
+            h2 {
+                background: linear-gradient(to right, #337500 0%, #b6db9a 100%);
+                -webkit-background-clip: text;
+                -webkit-text-fill-color: transparent;
+            }
+
+            h3 {
+                color: #b6db9a;
+            }
+        }
+    }
+
+    h3 {
+        font-size: 45px;
+    }
+
+.button {
+    text-decoration: none;
+    background-color: $color-primary;
+    height: 60px;
+    width: 300px;
+    color: rgb(253,203,70);
+    font-size: 35px;
+    text-align: center;
+    margin: auto;
+    margin-top: 75px;
+    border-radius: 10px;
+    top: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
