--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -37,6 +37,7 @@
   background-color: #579c87;
   height: 150px;
   text-align: center;
+  margin-bottom: 40px;
 }
 .tete .logo {
   height: 75px;
@@ -44,6 +45,7 @@
 }
 
 .pied {
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
   background-color: #579c87;
   height: 75px;
   display: flex;
@@ -63,8 +65,9 @@
 }
 .container article {
   margin-top: 100px;
-  height: 600px;
+  height: 700px;
   width: 525px;
+  margin: 60px;
   text-align: center;
   font-size: 30px;
   display: flex;
@@ -79,9 +82,16 @@
 .container #LNE h2 {
   font-family: "ranchoregular";
 }
+.container #LNE .titre {
+  text-transform: uppercase;
+  font-family: "ranchoregular";
+}
 .container #LNE img {
   margin-left: auto;
   margin-right: auto;
+}
+.container #LNE #logo-note {
+  height: 80px;
 }
 .container #LCALF {
   background-color: #fff5fe;
@@ -92,6 +102,9 @@
   -webkit-text-fill-color: transparent;
   font-family: "rochesterregular";
 }
+.container #LCALF .titre {
+  font-family: "rochesterregular";
+}
 .container #LCALF .orange {
   color: #c77412;
 }
@@ -100,6 +113,7 @@
 }
 .container #LCALF .bleu {
   color: #0080ff;
+  margin-bottom: 70px;
 }
 .container #LDDP {
   background-color: #f9f9f9;
@@ -109,6 +123,9 @@
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   font-family: "sevillanaregular";
+}
+.container #LDDP .titre {
+  font-family: "blokletters_balpenbalpen";
 }
 .container #LDDP h3 {
   color: #330867;
@@ -125,12 +142,16 @@
 .container #LPDG h3 {
   color: #b6db9a;
 }
+.container #LPDG .titre {
+  font-family: "blokletters_balpenbalpen";
+}
 
 h3 {
   font-size: 45px;
 }
 
 .button {
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
   text-decoration: none;
   background-color: #579c87;
   height: 60px;
@@ -139,7 +160,7 @@ h3 {
   font-size: 35px;
   text-align: center;
   margin: auto;
-  margin-top: 75px;
+  margin-top: 25px;
   border-radius: 10px;
   top: 50%;
   display: flex;
@@ -166,8 +187,9 @@ h1 {
   margin-top: 50px;
 }
 .menu header h2 {
-  margin-top: -10px;
+  margin-top: 10px;
   font-size: 55px;
+  margin-bottom: 100px;
 }
 .menu > * {
   margin-left: 100px;
@@ -184,6 +206,9 @@ h1 {
   font-family: "blokletters_balpenbalpen";
   font-size: 15px;
 }
+.menu .dessert {
+  line-height: 40px;
+}
 .menu footer {
   display: flex;
   justify-content: center;
@@ -197,6 +222,10 @@ h1 {
 }
 .menu footer h3 {
   font-size: 35px;
+}
+
+h1 {
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 }
 
 .box {
