Animation wiggle sur Contact et mentions légales

--- a/styles/scss/fonts.scss
+++ b/styles/scss/fonts.scss
@@ -1,7 +1,10 @@
 @font-face {
     font-family: 'blokletters_balpenbalpen';
     src: url('../../fonts/blokletters_balpenbalpen/Blokletters-Balpen-webfont.eot');
-    src: url('../../fonts/blokletters_balpenbalpen/Blokletters-Balpen-webfont.eot?#iefix') format('embedded-opentype'), url('../../fonts/blokletters_balpenbalpen/Blokletters-Balpen-webfont.woff2') format('woff2'), url('../../fonts/blokletters_balpenbalpen/Blokletters-Balpen-webfont.woff') format('woff'), url('../../fonts/blokletters_balpenbalpen/Blokletters-Balpen-webfont.ttf') format('truetype'), url('../../fonts/blokletters_balpenbalpen/Blokletters-Balpen-webfont.svg#blokletters_balpenbalpen') format('svg');
+    src: url('../../fonts/blokletters_balpenbalpen/Blokletters-Balpen-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../../fonts/blokletters_balpenbalpen/Blokletters-Balpen-webfont.woff') format('woff'),
+         url('../../fonts/blokletters_balpenbalpen/Blokletters-Balpen-webfont.ttf') format('truetype'),
+         url('../../fonts/blokletters_balpenbalpen/Blokletters-Balpen-webfont.svg#blokletters_balpenbalpen') format('svg');
     font-weight: normal;
     font-style: normal;
 }
@@ -9,7 +12,10 @@
 @font-face {
     font-family: 'ranchoregular';
     src: url('../../fonts/ranchoregular/Rancho-Regular-webfont.eot');
-    src: url('../../fonts/ranchoregular/Rancho-Regular-webfont.eot?#iefix') format('embedded-opentype'), url('../../fonts/ranchoregular/Rancho-Regular-webfont.woff2') format('woff2'), url('../../fonts/ranchoregular/Rancho-Regular-webfont.woff') format('woff'), url('../../fonts/ranchoregular/Rancho-Regular-webfont.ttf') format('truetype'), url('../../fonts/ranchoregular/Rancho-Regular-webfont.svg#ranchoregular') format('svg');
+    src: url('../../fonts/ranchoregular/Rancho-Regular-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../../fonts/ranchoregular/Rancho-Regular-webfont.woff') format('woff'),
+         url('../../fonts/ranchoregular/Rancho-Regular-webfont.ttf') format('truetype'),
+         url('../../fonts/ranchoregular/Rancho-Regular-webfont.svg#ranchoregular') format('svg');
     font-weight: normal;
     font-style: normal;
 }
@@ -17,7 +23,10 @@
 @font-face {
     font-family: 'rochesterregular';
     src: url('../../fonts/rochesterregular/Rochester-Regular-webfont.eot');
-    src: url('../../fonts/rochesterregular/Rochester-Regular-webfont.eot?#iefix') format('embedded-opentype'), url('../../fonts/rochesterregular/Rochester-Regular-webfont.woff2') format('woff2'), url('../../fonts/rochesterregular/Rochester-Regular-webfont.woff') format('woff'), url('../../fonts/rochesterregular/Rochester-Regular-webfont.ttf') format('truetype'), url('../../fonts/rochesterregular/Rochester-Regular-webfont.svg#rochesterregular') format('svg');
+    src: url('../../fonts/rochesterregular/Rochester-Regular-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../../fonts/rochesterregular/Rochester-Regular-webfont.woff') format('woff'),
+         url('../../fonts/rochesterregular/Rochester-Regular-webfont.ttf') format('truetype'),
+         url('../../fonts/rochesterregular/Rochester-Regular-webfont.svg#rochesterregular') format('svg');
     font-weight: normal;
     font-style: normal;
 }
@@ -25,7 +34,10 @@
 @font-face {
     font-family: 'sevillanaregular';
     src: url('../../fonts/sevillanaregular/Sevillana-Regular-webfont.eot');
-    src: url('../../fonts/sevillanaregular/Sevillana-Regular-webfont.eot?#iefix') format('embedded-opentype'), url('../../fonts/sevillanaregular/Sevillana-Regular-webfont.woff2') format('woff2'), url('../../fonts/sevillanaregular/Sevillana-Regular-webfont.woff') format('woff'), url('../../fonts/sevillanaregular/Sevillana-Regular-webfont.ttf') format('truetype'), url('../../fonts/sevillanaregular/Sevillana-Regular-webfont.svg#sevillanaregular') format('svg');
+    src: url('../../fonts/sevillanaregular/Sevillana-Regular-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../../fonts/sevillanaregular/Sevillana-Regular-webfont.woff') format('woff'),
+         url('../../fonts/sevillanaregular/Sevillana-Regular-webfont.ttf') format('truetype'),
+         url('../../fonts/sevillanaregular/Sevillana-Regular-webfont.svg#sevillanaregular') format('svg');
     font-weight: normal;
     font-style: normal;
 }
@@ -33,7 +45,10 @@
 @font-face {
     font-family: 'berkshire_swashregular';
     src: url('../../fonts/berkshire_swashregular/berkshireswash-regular-webfont.eot');
-    src: url('../../fonts/berkshire_swashregular/berkshireswash-regular-webfont.eot?#iefix') format('embedded-opentype'), url('../../fonts/berkshire_swashregular/berkshireswash-regular-webfont.woff2') format('woff2'), url('../../fonts/berkshire_swashregular/berkshireswash-regular-webfont.woff') format('woff'), url('../../fonts/berkshire_swashregular/berkshireswash-regular-webfont.ttf') format('truetype'), url('../../fonts/berkshire_swashregular/berkshireswash-regular-webfont.svg#berkshire_swashregular') format('svg');
+    src: url('../../fonts/berkshire_swashregular/berkshireswash-regular-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../../fonts/berkshire_swashregular/berkshireswash-regular-webfont.woff') format('woff'),
+         url('../../fonts/berkshire_swashregular/berkshireswash-regular-webfont.ttf') format('truetype'),
+         url('../../fonts/berkshire_swashregular/berkshireswash-regular-webfont.svg#berkshire_swashregular') format('svg');
     font-weight: normal;
     font-style: normal;
 }
