--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -1,49 +1,52 @@
 @font-face {
   font-family: "blokletters_balpenbalpen";
   src: url("../../fonts/blokletters_balpenbalpen/Blokletters-Balpen-webfont.eot");
-  src: url("../../fonts/blokletters_balpenbalpen/Blokletters-Balpen-webfont.eot?#iefix") format("embedded-opentype"), url("../../fonts/blokletters_balpenbalpen/Blokletters-Balpen-webfont.woff2") format("woff2"), url("../../fonts/blokletters_balpenbalpen/Blokletters-Balpen-webfont.woff") format("woff"), url("../../fonts/blokletters_balpenbalpen/Blokletters-Balpen-webfont.ttf") format("truetype"), url("../../fonts/blokletters_balpenbalpen/Blokletters-Balpen-webfont.svg#blokletters_balpenbalpen") format("svg");
+  src: url("../../fonts/blokletters_balpenbalpen/Blokletters-Balpen-webfont.eot?#iefix") format("embedded-opentype"), url("../../fonts/blokletters_balpenbalpen/Blokletters-Balpen-webfont.woff") format("woff"), url("../../fonts/blokletters_balpenbalpen/Blokletters-Balpen-webfont.ttf") format("truetype"), url("../../fonts/blokletters_balpenbalpen/Blokletters-Balpen-webfont.svg#blokletters_balpenbalpen") format("svg");
   font-weight: normal;
   font-style: normal;
 }
 @font-face {
   font-family: "ranchoregular";
   src: url("../../fonts/ranchoregular/Rancho-Regular-webfont.eot");
-  src: url("../../fonts/ranchoregular/Rancho-Regular-webfont.eot?#iefix") format("embedded-opentype"), url("../../fonts/ranchoregular/Rancho-Regular-webfont.woff2") format("woff2"), url("../../fonts/ranchoregular/Rancho-Regular-webfont.woff") format("woff"), url("../../fonts/ranchoregular/Rancho-Regular-webfont.ttf") format("truetype"), url("../../fonts/ranchoregular/Rancho-Regular-webfont.svg#ranchoregular") format("svg");
+  src: url("../../fonts/ranchoregular/Rancho-Regular-webfont.eot?#iefix") format("embedded-opentype"), url("../../fonts/ranchoregular/Rancho-Regular-webfont.woff") format("woff"), url("../../fonts/ranchoregular/Rancho-Regular-webfont.ttf") format("truetype"), url("../../fonts/ranchoregular/Rancho-Regular-webfont.svg#ranchoregular") format("svg");
   font-weight: normal;
   font-style: normal;
 }
 @font-face {
   font-family: "rochesterregular";
   src: url("../../fonts/rochesterregular/Rochester-Regular-webfont.eot");
-  src: url("../../fonts/rochesterregular/Rochester-Regular-webfont.eot?#iefix") format("embedded-opentype"), url("../../fonts/rochesterregular/Rochester-Regular-webfont.woff2") format("woff2"), url("../../fonts/rochesterregular/Rochester-Regular-webfont.woff") format("woff"), url("../../fonts/rochesterregular/Rochester-Regular-webfont.ttf") format("truetype"), url("../../fonts/rochesterregular/Rochester-Regular-webfont.svg#rochesterregular") format("svg");
+  src: url("../../fonts/rochesterregular/Rochester-Regular-webfont.eot?#iefix") format("embedded-opentype"), url("../../fonts/rochesterregular/Rochester-Regular-webfont.woff") format("woff"), url("../../fonts/rochesterregular/Rochester-Regular-webfont.ttf") format("truetype"), url("../../fonts/rochesterregular/Rochester-Regular-webfont.svg#rochesterregular") format("svg");
   font-weight: normal;
   font-style: normal;
 }
 @font-face {
   font-family: "sevillanaregular";
   src: url("../../fonts/sevillanaregular/Sevillana-Regular-webfont.eot");
-  src: url("../../fonts/sevillanaregular/Sevillana-Regular-webfont.eot?#iefix") format("embedded-opentype"), url("../../fonts/sevillanaregular/Sevillana-Regular-webfont.woff2") format("woff2"), url("../../fonts/sevillanaregular/Sevillana-Regular-webfont.woff") format("woff"), url("../../fonts/sevillanaregular/Sevillana-Regular-webfont.ttf") format("truetype"), url("../../fonts/sevillanaregular/Sevillana-Regular-webfont.svg#sevillanaregular") format("svg");
+  src: url("../../fonts/sevillanaregular/Sevillana-Regular-webfont.eot?#iefix") format("embedded-opentype"), url("../../fonts/sevillanaregular/Sevillana-Regular-webfont.woff") format("woff"), url("../../fonts/sevillanaregular/Sevillana-Regular-webfont.ttf") format("truetype"), url("../../fonts/sevillanaregular/Sevillana-Regular-webfont.svg#sevillanaregular") format("svg");
   font-weight: normal;
   font-style: normal;
 }
 @font-face {
   font-family: "berkshire_swashregular";
   src: url("../../fonts/berkshire_swashregular/berkshireswash-regular-webfont.eot");
-  src: url("../../fonts/berkshire_swashregular/berkshireswash-regular-webfont.eot?#iefix") format("embedded-opentype"), url("../../fonts/berkshire_swashregular/berkshireswash-regular-webfont.woff2") format("woff2"), url("../../fonts/berkshire_swashregular/berkshireswash-regular-webfont.woff") format("woff"), url("../../fonts/berkshire_swashregular/berkshireswash-regular-webfont.ttf") format("truetype"), url("../../fonts/berkshire_swashregular/berkshireswash-regular-webfont.svg#berkshire_swashregular") format("svg");
+  src: url("../../fonts/berkshire_swashregular/berkshireswash-regular-webfont.eot?#iefix") format("embedded-opentype"), url("../../fonts/berkshire_swashregular/berkshireswash-regular-webfont.woff") format("woff"), url("../../fonts/berkshire_swashregular/berkshireswash-regular-webfont.ttf") format("truetype"), url("../../fonts/berkshire_swashregular/berkshireswash-regular-webfont.svg#berkshire_swashregular") format("svg");
   font-weight: normal;
   font-style: normal;
 }
-.tete {
+/* ENTETE */
+.entete {
   background-color: #579c87;
   height: 150px;
   text-align: center;
   margin-bottom: 40px;
 }
-.tete .logo {
+.entete .logo {
   height: 75px;
   margin-top: 35px;
 }
 
+/* ----------------------------------------------- */
+/* PIED DE PAGE */
 .pied {
   font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
   background-color: #579c87;
@@ -61,10 +64,32 @@
   margin: 20px;
 }
 
+/* ----------------------------------------------- */
+/* GENERALE */
+h3 {
+  font-size: 45px;
+}
+
+a {
+  text-decoration: none;
+}
+
+h1 {
+  font-size: 50px;
+  text-align: center;
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+}
+
+/* ----------------------------------------------- */
+/* PAGE D'ACCUEIL */
 .container {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
+  /* LA NOTE ENCHANTEE */
+  /* LE CHIC A LA FRANCAISE */
+  /* LE DELICE DES PAPILLES */
+  /* LA PALETTE DU GOUT */
 }
 .container article {
   margin-top: 100px;
@@ -83,11 +108,11 @@
   color: #3c1218;
 }
 .container #LNE h2 {
-  font-family: "ranchoregular";
+  font-family: "ranchoregular", Arial, Helvetica, sans-serif;
 }
 .container #LNE .titre {
   text-transform: uppercase;
-  font-family: "ranchoregular";
+  font-family: "ranchoregular", Arial, Helvetica, sans-serif;
 }
 .container #LNE img {
   margin-left: auto;
@@ -103,10 +128,10 @@
   background: linear-gradient(to right, #c77412 0%, #7738cf 100%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-  font-family: "rochesterregular";
+  font-family: "rochesterregular", Arial, Helvetica, sans-serif;
 }
 .container #LCALF .titre {
-  font-family: "rochesterregular";
+  font-family: "rochesterregular", Arial, Helvetica, sans-serif;
 }
 .container #LCALF .orange {
   color: #c77412;
@@ -125,10 +150,10 @@
   background: linear-gradient(to right, #30CFD0 0%, #330867 100%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-  font-family: "sevillanaregular";
+  font-family: "sevillanaregular", Arial, Helvetica, sans-serif;
 }
 .container #LDDP .titre {
-  font-family: "blokletters_balpenbalpen";
+  font-family: "blokletters_balpenbalpen", Arial, Helvetica, sans-serif;
 }
 .container #LDDP h3 {
   color: #330867;
@@ -140,44 +165,57 @@
   background: linear-gradient(to right, #337500 0%, #b6db9a 100%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-  font-family: "berkshire_swashregular";
+  font-family: "berkshire_swashregular", Arial, Helvetica, sans-serif;
 }
 .container #LPDG h3 {
   color: #b6db9a;
 }
 .container #LPDG .titre {
-  font-family: "blokletters_balpenbalpen";
+  font-family: "blokletters_balpenbalpen", Arial, Helvetica, sans-serif;
 }
 
-h3 {
-  font-size: 45px;
-}
-
-.button {
+/* ----------------------------------------------- */
+/* BOUTTON */
+.btn {
   font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-  text-decoration: none;
   background-color: #579c87;
-  height: 60px;
-  width: 300px;
+  height: 80px;
+  width: 400px;
   color: #fdcb46;
-  font-size: 35px;
-  text-align: center;
+  font-size: 45px;
+  display: block;
   margin: auto;
   margin-top: 25px;
   border-radius: 10px;
-  top: 50%;
+  border: none;
+}
+
+/* ----------------------------------------------- */
+.secouer:hover {
+  animation: wiggle 0.6s ease-in;
+}
+
+@keyframes wiggle {
+  10%, 90% {
+    transform: rotate(0deg);
+  }
+  20%, 80% {
+    transform: rotate(-2deg);
+  }
+  30%, 50%, 70% {
+    transform: rotate(0deg);
+  }
+  40%, 60% {
+    transform: rotate(2deg);
+  }
+}
+/* PAGE DU MENU */
+.box {
   display: flex;
-  flex-direction: column;
-  justify-content: center;
 }
-
-a {
-  text-decoration: none;
-}
-
-h1 {
-  font-size: 50px;
-  text-align: center;
+.box :first-child {
+  flex: 1;
+  margin-right: 15px;
 }
 
 .menu {
@@ -202,11 +240,11 @@ h1 {
   text-align: center;
   margin-top: 50px;
   margin-bottom: -10px;
-  font-family: "blokletters_balpenbalpen";
+  font-family: "blokletters_balpenbalpen", Arial, Helvetica, sans-serif;
   font-size: 30px;
 }
 .menu p {
-  font-family: "blokletters_balpenbalpen";
+  font-family: "blokletters_balpenbalpen", Arial, Helvetica, sans-serif;
   font-size: 15px;
 }
 .menu .dessert {
@@ -227,19 +265,8 @@ h1 {
   font-size: 35px;
 }
 
-h1 {
-  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-}
-
-.box {
-  display: flex;
-}
-.box :first-child {
-  flex: 1;
-  margin-right: 15px;
-}
-
-/*TRAIT DE SEPARATION*/
+/* ----------------------------------------------- */
+/* TRAIT DE SEPARATION */
 #LNE.menu h3 {
   background: no-repeat left url("../../images/ligne1.png"), no-repeat right url("../../images/ligne1.png");
 }
@@ -281,5 +308,7 @@ h1 {
   margin-right: 30px;
   background: no-repeat left url("../../images/ligne14.png"), no-repeat right url("../../images/ligne15.png");
 }
+
+/* ----------------------------------------------- */
 
 /*# sourceMappingURL=style.css.map */
