--- a/styles/scss/style.scss
+++ b/styles/scss/style.scss
@@ -1,292 +1,258 @@
 $color-primary:rgb(87,156,135);
 
 @import "fonts.scss";
+@import "entete-pied.scss";
 
 @mixin shadows {
     box-shadow: 0 0.9px 2.4px rgba(0, 0, 0, 0.016), 0 2.2px 6px rgba(0, 0, 0, 0.022), 0 4.4px 12.2px rgba(0, 0, 0, 0.028), 0 9.1px 25.2px rgba(0, 0, 0, 0.034), 0 25px 69px rgba(0, 0, 0, 0.05);
 }
 
-    .tete {
-        background-color: $color-primary;
-        height: 150px;
-        text-align: center;
-        margin-bottom: 40px;
-
-        .logo {
-            height: 75px;
-            margin-top: 35px;
-        }
-    }
-
-    .pied {
-        font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-        background-color: $color-primary;
-        height: 75px;
-        display: flex;
-        justify-content: space-between;
-        position: sticky;
-        bottom: 0;
-        width: 100%;
-        margin-top:85px;
-
-        a {
-            color: rgb(253,203,70);
-            font-size: 30px;
-            margin: 20px;
-        }
-    }
-
-.container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-
-    article {
-        margin-top: 100px;
-        height: 700px;
-        width: 525px;
-        margin:60px;
-        text-align: center;
-        font-size: 30px;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        @include shadows;
-    }
-
-    #LNE {
-        background-color: rgb(252,223,219);
-        color: rgb(60,18,24);
-
-        h2 {
-            font-family: 'ranchoregular';
-        }
-        .titre{
-            text-transform: uppercase;
-            font-family: 'ranchoregular';
-        }
-
-        img {
-            margin-left: auto;
-            margin-right: auto;
-        }
-
-        #logo-note{
-            height: 80px;
-        }
-    }
-
-    #LCALF {
-        background-color: rgb(255,245,254);
-
-        h2 {
-            background: linear-gradient(to right, #c77412 0%, #7738cf 100%);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            font-family: 'rochesterregular';
-        }
-        .titre{
-            font-family: 'rochesterregular';
-        }
-
-        .orange{
-            color: #c77412;
-        }
-        .violet{
-            color:#7738cf;
-        }
-        .bleu{
-            color:#0080ff;
-            margin-bottom: 70px;
-        }
-    }
-
-    #LDDP {
-        background-color: rgb(249,249,249);
-
-        h2 {
-            background: linear-gradient(to right, #30CFD0 0%, #330867 100%);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            font-family: 'sevillanaregular';
-        }
-
-        .titre{
-            font-family: 'blokletters_balpenbalpen';
-        }
-
-        h3 {
-            color: #330867;
-        }
-    }
-
-    #LPDG {
-        background-color: rgb(253,253,253);
-
-        h2 {
-            background: linear-gradient(to right, #337500 0%, #b6db9a 100%);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            font-family: 'berkshire_swashregular';
-        }
-
-        h3 {
-            color: #b6db9a;
-        }
-        .titre{
-            font-family: 'blokletters_balpenbalpen';
-
-        }
-
-    }
-}
-
+/* GENERALE */
     h3 {
         font-size: 45px;
     }
-
-.button {
-    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-    text-decoration: none;
-    background-color: $color-primary;
-    height: 60px;
-    width: 300px;
-    color: rgb(253,203,70);
-    font-size: 35px;
-    text-align: center;
-    margin: auto;
-    margin-top: 25px;
-    border-radius: 10px;
-    top: 50%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
-
-a {
-    text-decoration: none;
-}
-
-h1{
-    font-size:50px;
-    text-align:center;
-}
-
-.menu {
-    font-size: 30px;
-    border-left: 20px;
-    @include shadows;
-    
-    header {
-        text-align: center;
-        margin-top: 50px;
-
-        h2 {
-            margin-top: 10px;
-            font-size: 55px;
-            margin-bottom: 100px;
-        }
+    a {
+        text-decoration: none;
     }
-
-    > * {
-        margin-left: 100px;
-        margin-right: 100px;
+    h1{
+        font-size:50px;
+        text-align:center;
+        font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
     }
+/* ----------------------------------------------- */
 
-    h3 {
-        text-align: center;
-        margin-top: 50px;
-        margin-bottom: -10px;
-        font-family: 'blokletters_balpenbalpen';
-        font-size:30px;
-    }
-
-    p {
-        font-family: 'blokletters_balpenbalpen';
-        font-size: 15px;
-    }
-
-    .dessert{
-        line-height: 40px;
-    }
-
-    footer {
+/* PAGE D'ACCUEIL */
+    .container {
         display: flex;
-        justify-content: center;
-        align-items: center;
-        margin-bottom: 30px;
-
-        #img-petit {
-            height: 45px;
-            margin: 0px;
-            margin-right: 10px;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        article {
+            margin-top: 100px;
+            height: 700px;
+            width: 525px;
+            margin:60px;
+            text-align: center;
+            font-size: 30px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            @include shadows;
         }
+        /* LA NOTE ENCHANTEE */
+        #LNE {
+            background-color: rgb(252,223,219);
+            color: rgb(60,18,24);
+            h2 {
+                font-family: 'ranchoregular', Arial, Helvetica, sans-serif;
+            }
+            .titre{
+                text-transform: uppercase;
+                font-family: 'ranchoregular', Arial, Helvetica, sans-serif;
+            }
+            img {
+                margin-left: auto;
+                margin-right: auto;
+            }
+            #logo-note{
+                height: 80px;
+            }
+        }
+        /* LE CHIC A LA FRANCAISE */
+        #LCALF {
+            background-color: rgb(255,245,254);
+            h2 {
+                background: linear-gradient(to right, #c77412 0%, #7738cf 100%);
+                -webkit-background-clip: text;
+                -webkit-text-fill-color: transparent;
+                font-family: 'rochesterregular', Arial, Helvetica, sans-serif;
+            }
+            .titre{
+                font-family: 'rochesterregular', Arial, Helvetica, sans-serif;
+            }
+            .orange{
+                color: #c77412;
+            }
+            .violet{
+                color:#7738cf;
+            }
+            .bleu{
+                color:#0080ff;
+                margin-bottom: 70px;
+            }
+        }
+        /* LE DELICE DES PAPILLES */
+        #LDDP {
+            background-color: rgb(249,249,249);
+            h2 {
+                background: linear-gradient(to right, #30CFD0 0%, #330867 100%);
+                -webkit-background-clip: text;
+                -webkit-text-fill-color: transparent;
+                font-family: 'sevillanaregular', Arial, Helvetica, sans-serif;
+            }
+            .titre{
+                font-family: 'blokletters_balpenbalpen', Arial, Helvetica, sans-serif;
+            }
+            h3 {
+                color: #330867;
+            }
+        }
+        /* LA PALETTE DU GOUT */
+        #LPDG {
+            background-color: rgb(253,253,253);
+            h2 {
+                background: linear-gradient(to right, #337500 0%, #b6db9a 100%);
+                -webkit-background-clip: text;
+                -webkit-text-fill-color: transparent;
+                font-family: 'berkshire_swashregular', Arial, Helvetica, sans-serif;
+            }
+            h3 {
+                color: #b6db9a;
+            }
+            .titre{
+                font-family: 'blokletters_balpenbalpen', Arial, Helvetica, sans-serif;
+            }
+        }
+    }
+/* ----------------------------------------------- */
 
+/* BOUTTON */
+    .btn {
+        font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+        background-color: $color-primary;
+        height: 80px;
+        width: 400px;
+        color: rgb(253,203,70);
+        font-size: 45px;
+        display: block;
+        margin: auto;
+        margin-top: 25px;
+        border-radius: 10px;
+        border:none;
+    }
+/* ----------------------------------------------- */
+
+.secouer{
+    &:hover{
+        animation: wiggle 0.6s ease-in;
+    }
+}
+
+@keyframes wiggle{
+    10%, 90% {
+      transform: rotate(0deg);
+    }
+    20%, 80% {
+      transform: rotate(-2deg);
+    }
+    30%, 50%, 70% {
+      transform: rotate(0deg);
+    }
+    40%, 60% {
+      transform: rotate(2deg);
+    }
+  }
+
+/* PAGE DU MENU */
+    .box{
+        display: flex;
+        ;:first-child{
+            flex:1;
+            margin-right: 15px;
+        }
+    }
+    .menu {
+        font-size: 30px;
+        border-left: 20px;
+        @include shadows;
+        header {
+            text-align: center;
+            margin-top: 50px;
+            h2 {
+                margin-top: 10px;
+                font-size: 55px;
+                margin-bottom: 100px;
+            }
+        }
+        > * {
+            margin-left: 100px;
+            margin-right: 100px;
+        }
         h3 {
-            font-size: 35px;
+            text-align: center;
+            margin-top: 50px;
+            margin-bottom: -10px;
+            font-family: 'blokletters_balpenbalpen', Arial, Helvetica, sans-serif;
+            font-size:30px;
+        }
+        p {
+            font-family: 'blokletters_balpenbalpen', Arial, Helvetica, sans-serif;
+            font-size: 15px;
+        }
+        .dessert{
+            line-height: 40px;
+        }
+        footer {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin-bottom: 30px;
+            #img-petit {
+                height: 45px;
+                margin: 0px;
+                margin-right: 10px;
+            }
+            h3 {
+                font-size: 35px;
+            }
         }
     }
-}
+/* ----------------------------------------------- */
 
-h1{
-    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-}
-
-.box{
-    display: flex;
-    ;:first-child{
-        flex:1;
-        margin-right: 15px;
+/* TRAIT DE SEPARATION */
+    #LNE.menu{
+        h3{
+            background: no-repeat left url("../../images/ligne1.png"), no-repeat right url("../../images/ligne1.png");
+        }
     }
-}
-
-/*TRAIT DE SEPARATION*/
-#LNE.menu{
-    h3{
-        background: no-repeat left url("../../images/ligne1.png"), no-repeat right url("../../images/ligne1.png");
+    #LCALF.menu{
+        .orange h3{
+            margin-left: -70px;
+            margin-right: -70px;
+            background: no-repeat left url("../../images/ligne2.png"), no-repeat right url("../../images/ligne3.png");
+        }
+        .violet h3{
+            margin-left: -70px;
+            margin-right: -70px;
+            background: no-repeat left url("../../images/ligne4.png"), no-repeat right url("../../images/ligne5.png");
+        }
+        .bleu h3{
+            margin-left: -70px;
+            margin-right: -70px;
+            background: no-repeat left url("../../images/ligne6.png"), no-repeat right url("../../images/ligne7.png");
+        }
     }
-}
-
-#LCALF.menu{
-    .orange h3{
-        margin-left: -70px;
-        margin-right: -70px;
-        background: no-repeat left url("../../images/ligne2.png"), no-repeat right url("../../images/ligne3.png");
+    #LDDP.menu{
+        .trait-bleu-fonce{
+            margin-left: 20px;
+            margin-right: 20px;
+            background: no-repeat left url("../../images/ligne8.png"), no-repeat right url("../../images/ligne9.png");
+        }
+        .trait-bleu{
+            margin-left: 20px;
+            margin-right: 20px;
+            background: no-repeat left url("../../images/ligne10.png"), no-repeat right url("../../images/ligne11.png");
+        }
+        .trait-bleu-clair{
+            margin-left: 20px;
+            margin-right: 20px;
+            background: no-repeat left url("../../images/ligne12.png"), no-repeat right url("../../images/ligne13.png");
+        }
     }
-    .violet h3{
-        margin-left: -70px;
-        margin-right: -70px;
-        background: no-repeat left url("../../images/ligne4.png"), no-repeat right url("../../images/ligne5.png");
+    #LPDG.menu{
+        h3{
+            margin-left: 30px;
+            margin-right: 30px;
+            background: no-repeat left url("../../images/ligne14.png"), no-repeat right url("../../images/ligne15.png");
+        }
     }
-    .bleu h3{
-        margin-left: -70px;
-        margin-right: -70px;
-        background: no-repeat left url("../../images/ligne6.png"), no-repeat right url("../../images/ligne7.png");
-    }
-}
-
-#LDDP.menu{
-    .trait-bleu-fonce{
-        margin-left: 20px;
-        margin-right: 20px;
-        background: no-repeat left url("../../images/ligne8.png"), no-repeat right url("../../images/ligne9.png");
-    }
-    .trait-bleu{
-        margin-left: 20px;
-        margin-right: 20px;
-        background: no-repeat left url("../../images/ligne10.png"), no-repeat right url("../../images/ligne11.png");
-    }
-    .trait-bleu-clair{
-        margin-left: 20px;
-        margin-right: 20px;
-        background: no-repeat left url("../../images/ligne12.png"), no-repeat right url("../../images/ligne13.png");
-    }
-}
-
-#LPDG.menu{
-    h3{
-        margin-left: 30px;
-        margin-right: 30px;
-        background: no-repeat left url("../../images/ligne14.png"), no-repeat right url("../../images/ligne15.png");
-    }
-}
+/* ----------------------------------------------- */
