--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -177,17 +177,33 @@ h1 {
 /* ----------------------------------------------- */
 /* BOUTTON */
 .btn {
+  text-align: left;
+  padding-left: 60px;
   font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
   background-color: #579c87;
   height: 80px;
-  width: 400px;
+  width: 450px;
   color: #fdcb46;
   font-size: 45px;
   display: block;
   margin: auto;
   margin-top: 25px;
   border-radius: 10px;
-  border: none;
+  border: 100px;
+  text-align: left;
+}
+.btn:after {
+  overflow: hidden;
+  display: inline-block;
+  vertical-align: bottom;
+  animation: ellipsis steps(4, end) 2s infinite;
+  content: "...";
+  width: 0px;
+}
+@keyframes ellipsis {
+  to {
+    width: 1em;
+  }
 }
 
 /* ----------------------------------------------- */
